--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,19 @@
     <string name="b_compilation">ПОДБОРКИ</string>
     <string name="b_settings">НАСТРОЙКИ</string>
     <string name="title_topAppBar">Search it!</string>
+    <string name="title_venom">Веном: Последний танец</string>
+    <string name="description_venom">Эдди и Веном в бегах. Преследуемые обоими мирами и с приближающейся сетью, дуэт вынужден принять сокрушительное решение, которое опустит занавес над последним танцем Венома и Эдди.</string>
+    <string name="title_beekeeper">Пчеловод</string>
+    <string name="description_beekeeper">Добросердечная домовладелица совершает самоубийство, став жертвой фишинговой аферы, что заставляет бывшего сотрудника \"Пасечника\" Адама Клея начать жестокую кампанию по отмщению виновным.</string>
+    <string name="title_despicable_me">Гадкий я 4</string>
+    <string name="description_despicable_me">Грю, Люси, Марго, Эдит и Агнес приветствуют нового члена семьи, Грю-младшего, который намерен мучить своего отца.</string>
+    <string name="title_alien">Чужой: Ромул</string>
+    <string name="description_alien">Исследуя недра заброшенной космической станции, группа молодых космических колонистов сталкивается лицом к лицу с самой ужасающей формой жизни во Вселенной.</string>
+    <string name="title_puzzle">Головоломка 2</string>
+    <string name="description_puzzle">Продолжение, в котором Райли вступает в период полового созревания и в результате испытывает совершенно новые, более сложные эмоции. </string>
+    <string name="title_bad_guys">Плохие парни до конца</string>
+    <string name="discription_bad_guys">Когда их покойный капитан полиции оказывается связанным с наркокартелями, остроумные копы Майами Майк Лоури и Маркус Бернетт отправляются на опасную миссию, чтобы очистить его имя.</string>
+    <string name="title_planet_of_the_apes">Планета обезьян: Новое царство</string>
+    <string name="discription_planet_of_the_apes">Спустя много лет после правления Цезаря молодая обезьяна отправляется в путешествие, которое заставит ее подвергнуть сомнению все, чему ее учили о прошлом, и сделать выбор, который определит будущее как обезьян, так и людей.</string>
+
 </resources>
